# data-pipeline-validator

./: .gitignore  FINAL_REVIEW.md  Makefile  PROJECT_PLAN.md  README.md  index.html  pyproject.toml  requirements.txt  validate.py  validation_report.json
configs/validation/: rules.yaml
docs/: architecture.md  data_dictionary.md  decision_log.md  methodology.md
reports/: eda.md  research_notes.md  results.md
src/: __init__.py
src/checks/: __init__.py  business_rules.py  completeness.py  range_validation.py  referential_integrity.py  uniqueness.py
src/cli/: run.py
src/data/: __init__.py  generator.py
src/pipeline/: __init__.py  runner.py  validator.py
tests/: test_checks.py  test_validator.py
